1. Collection API Улучшения[#159676]